--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-ntloader
-*.s
-*.o
-*.a
-*.elf
-*.map
-*.efi
-efireloc
+./ntloader
+./*.s
+./*.o
+./*.a
+./*.elf
+./*.map
+./*.efi
+./efireloc
 raw/*
 initrd.cpio
 initrd.lz1
