--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-./ntloader
-./*.s
-./*.o
-./*.a
-./*.elf
-./*.map
-./*.efi
-./efireloc
-raw/*
+/ntloader
+/ntloader.zip
+/*.s
+/*.o
+/*.a
+/*.elf
+/*.map
+/*.efi
+/efireloc
 initrd.cpio
 initrd.lz1
-ntloader.zip
+raw/*
